--- a/MercariDataWrangling.ipynb
+++ b/MercariDataWrangling.ipynb
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Reading in Data\n",
-    "path = \"/Users/jasonzhou/Documents/GitHub/GuidedCapstone2\"\n",
+    "path = \"/Users/jasonzhou/Documents/GuidedCapstone2\"\n",
     "os.chdir(path)\n",
     "mercari_data = pd.read_csv(\"TrainMercari.csv\")\n",
     "mercari_data = mercari_data.rename(index=str, columns = {\"name\":\"Name\", \"item_condition_id\":\"Condition\",\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "max    5.000000e+00  2.009000e+03  1.000000e+00"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "4  COSMETIC LOOSE GLITTER! SPARKLES And SHINES!! ...  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "Shipping               0   0.000000"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -430,18 +430,18 @@
        "Bundle                                      1572\n",
        "Reserved                                     325\n",
        "Dress                                        312\n",
-       "BUNDLE                                       303\n",
        "Converse                                     303\n",
+       "BUNDLE                                       303\n",
        "                                            ... \n",
-       "Stunning dress                                 1\n",
-       "Lularoe Minnie Mouse Randy 3X NWT              1\n",
-       "Lululemon ALL SPORT SUPPORT Tank black 6       1\n",
-       "TRENDY Choker                                  1\n",
-       "Dragonball Xenoverse 2                         1\n",
+       "FLASH SALE! WOODEN KITCHEN PLAY SET USED       1\n",
+       "10 dress bundle for willow wonka               1\n",
+       "Delta Zeta notebook set                        1\n",
+       "Classic 925 Silver Pandora Bracelet 16cm       1\n",
+       "Kay jeweler sterling silver ring               1\n",
        "Name: Name, Length: 886108, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -465,15 +465,15 @@
        "Beauty/Makeup/Lips                                21136\n",
        "Electronics/Video Games & Consoles/Games          18737\n",
        "                                                  ...  \n",
-       "Handmade/Needlecraft/Felted                           1\n",
-       "Handmade/Paper Goods/Pad                              1\n",
-       "Handmade/Accessories/Mirror                           1\n",
-       "Handmade/Candles/Stationery                           1\n",
-       "Handmade/Holidays/St Patricks                         1\n",
+       "Handmade/Candles/Scrapbooking                         1\n",
+       "Handmade/Geekery/Housewares                           1\n",
+       "Vintage & Collectibles/Housewares/Towel               1\n",
+       "Home/Bath/Bathroom Shelves                            1\n",
+       "Kids/Diapering/Washcloths & Towels                    1\n",
        "Name: Category, Length: 1258, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,27 +492,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Lularoe TC leggings - Women/Athletic Apparel/Pants, Tights, Leggings                                  188\n",
-       "Converse - Women/Shoes/Fashion Sneakers                                                               179\n",
-       "Coach wallet - Women/Women's Accessories/Wallets                                                      176\n",
-       "Michael Kors Wallet - Women/Women's Accessories/Wallets                                               160\n",
-       "Miss Me Jeans - Women/Jeans/Boot Cut                                                                  158\n",
-       "                                                                                                     ... \n",
-       "AE Jeans bundle - Women/Jeans/Slim, Skinny                                                              1\n",
-       "Bundle For @Tomko's Treasures - Home/Home DÃ©cor/Home DÃ©cor Accents                                    1\n",
-       "Original OEM 12W USB Power Adap.+ 2M USB - Electronics/Cell Phones & Accessories/Cables & Adapters      1\n",
-       "Just Black And Grey Leggings - Women/Athletic Apparel/Pants, Tights, Leggings                           1\n",
-       "jade pendant sterling silver - Women/Jewelry/Necklaces                                                  1\n",
+       "Lularoe TC leggings - Women/Athletic Apparel/Pants, Tights, Leggings                                     188\n",
+       "Converse - Women/Shoes/Fashion Sneakers                                                                  179\n",
+       "Coach wallet - Women/Women's Accessories/Wallets                                                         176\n",
+       "Michael Kors Wallet - Women/Women's Accessories/Wallets                                                  160\n",
+       "Miss Me Jeans - Women/Jeans/Boot Cut                                                                     158\n",
+       "                                                                                                        ... \n",
+       "Michael Kors glasses case - Other/Other/Other                                                              1\n",
+       "Comics- Lobo - 4 Total- All NM condition - Vintage & Collectibles/Book/Comics                              1\n",
+       "Wipe wormer - Kids/Diapering/Wipes & Holders                                                               1\n",
+       "Lularoe XS Perfect T and OS Leggings - Women/Athletic Apparel/Pants, Tights, Leggings                      1\n",
+       "JVC car stereo, cassette, and CD player - Electronics/Car Audio, Video & GPS/Car Stereos & Components      1\n",
        "Length: 916716, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -595,6 +595,13 @@
     "#Histograms of numeric features\n",
     "mercari_data.hist(figsize=(15, 10))\n",
     "plt.subplots_adjust(hspace=0.5);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks like we don't have any values that are invalid."
    ]
   },
   {
@@ -1023,6 +1030,15 @@
     "\n",
     "duplicateRowsDF = mercari_data[mercari_data.duplicated()]\n",
     "duplicateRowsDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mercari_data.to_csv('MercariDataCleaned.csv')"
    ]
   },
   {
