--- a/MercariEDA.ipynb
+++ b/MercariEDA.ipynb
@@ -11,13 +11,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'researchpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-c48714a25be9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstatistics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mresearchpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mrp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mf_oneway\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'researchpy'"
+     ]
+    }
+   ],
    "source": [
     "#imports\n",
     "\n",
     "import statistics\n",
+    "from scipy.stats import\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
@@ -27,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,8 +422,76 @@
     "The slope of the best fit line is also in line with the results thus far. Listings that require the buyer to pay for\n",
     "shipping also charge higher prices overall. However this is merely correlation. Perhaps pricier listings are higher in\n",
     "demand, and the seller might be able to push the shipping fees onto the buyer since they would be willing to pay it\n",
-    "anyways. "
+    "anyways.\n",
+    "\n",
+    "Let us now take a look at the non-numeric data, starting with Brand."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Nike                    38161\n",
+       "PINK                    38123\n",
+       "Victoria's Secret       34159\n",
+       "LuLaRoe                 21900\n",
+       "Apple                   12222\n",
+       "                        ...  \n",
+       "P&N                         1\n",
+       "Oregon Scientific           1\n",
+       "Da-Nang                     1\n",
+       "BebeSounds                  1\n",
+       "Lime Crime Cosmetics        1\n",
+       "Name: Brand, Length: 4383, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get number of unique values of 'Brand'\n",
+    "\n",
+    "mercari_data['Brand'].nunique()\n",
+    "\n",
+    "# Lets then identify the Brands that are most present in the data\n",
+    "\n",
+    "mercari_data['Brand'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1258"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get number of unique values of 'Category'\n",
+    "\n",
+    "mercari_data['Category'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
