--- a/MercariPreProcessing.ipynb
+++ b/MercariPreProcessing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,64 +69,64 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>5</td>\n",
-       "      <td>Women/Tops &amp; Blouses/Blouse</td>\n",
-       "      <td>Unbranded</td>\n",
-       "      <td>21</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Beauty/Makeup/Lips</td>\n",
+       "      <td>Sephora</td>\n",
+       "      <td>3.80735</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>5</td>\n",
-       "      <td>Electronics/TV, Audio &amp; Surveillance/Headphones</td>\n",
-       "      <td>Unbranded</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Beauty/Makeup/Lips</td>\n",
+       "      <td>Sephora</td>\n",
+       "      <td>3.80735</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Beauty/Makeup/Lips</td>\n",
-       "      <td>Sephora</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Electronics/Cell Phones &amp; Accessories/Cell Pho...</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>6.30378</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>5</td>\n",
-       "      <td>Beauty/Makeup/Lips</td>\n",
-       "      <td>Sephora</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Women/Athletic Apparel/Pants, Tights, Leggings</td>\n",
+       "      <td>PINK</td>\n",
+       "      <td>5.39232</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Beauty/Makeup/Makeup Sets</td>\n",
-       "      <td>Unbranded</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Women/Dresses/Knee-Length</td>\n",
+       "      <td>Customized &amp; Personalized</td>\n",
+       "      <td>4.80735</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Condition                                         Category      Brand  \\\n",
-       "0          5                      Women/Tops & Blouses/Blouse  Unbranded   \n",
-       "1          5  Electronics/TV, Audio & Surveillance/Headphones  Unbranded   \n",
-       "2          5                               Beauty/Makeup/Lips    Sephora   \n",
-       "3          5                               Beauty/Makeup/Lips    Sephora   \n",
-       "4          4                        Beauty/Makeup/Makeup Sets  Unbranded   \n",
+       "   Condition                                           Category  \\\n",
+       "0          5                                 Beauty/Makeup/Lips   \n",
+       "1          5                                 Beauty/Makeup/Lips   \n",
+       "2          3  Electronics/Cell Phones & Accessories/Cell Pho...   \n",
+       "3          5     Women/Athletic Apparel/Pants, Tights, Leggings   \n",
+       "4          3                          Women/Dresses/Knee-Length   \n",
        "\n",
-       "   Price  Shipping  \n",
-       "0     21         0  \n",
-       "1     10         1  \n",
-       "2     14         1  \n",
-       "3     14         0  \n",
-       "4      5         1  "
+       "                       Brand   Price  Shipping  \n",
+       "0                    Sephora 3.80735         1  \n",
+       "1                    Sephora 3.80735         0  \n",
+       "2                      Apple 6.30378         0  \n",
+       "3                       PINK 5.39232         1  \n",
+       "4  Customized & Personalized 4.80735         0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1048575, 5)"
+       "(567252, 5)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "Shipping       0 0.00000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we determine our training and test data, we call train_test_split on X and y. y in this case is apparent, it will simply be the Price column, or df['Price']. X will be comprised of our Brand, Category, and Shipping columns all in dummy variable form."
+    "Due to the constraints of our computing power, we have to vastly cut down on the dataset to make training and adjusting models later run within a reasonable time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.sample(frac = 0.2)"
    ]
   },
   {
@@ -278,7 +287,7 @@
     {
      "data": {
       "text/plain": [
-       "(1048575, 5644)"
+       "(113450, 4)"
       ]
      },
      "execution_count": 7,
@@ -287,13 +296,14 @@
     }
    ],
    "source": [
-    "# Forming our final X\n",
-    "\n",
-    "X = pd.get_dummies(df[['Brand', 'Category', 'Shipping']])\n",
-    "\n",
-    "# verifying dimensions. should have 4384 + 1259 + 2 = 5645 rows\n",
-    "\n",
-    "X.shape"
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we determine our training and test data, we call train_test_split on X and y. y in this case is apparent, it will simply be the Price column, or df['Price']. X will be comprised of our Brand, Category, and Shipping columns all in dummy variable form."
    ]
   },
   {
@@ -302,27 +312,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Splitting the data into train and test\n",
-    "y = df['Price']\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Usually we would standardize the training set data, but it is all one-hot encoded already, so this will no longer\n",
-    "be necessary."
+    "X = df[['Category', 'Brand', 'Shipping']]\n",
+    "y = df['Price']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read out all 4 sets of training/testing data to csv files so we don't have to repeat this work\n",
+    "X_enc = pd.get_dummies(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trimming Data down to a more workable size\n",
+    "\n",
+    "X_trimmed, _ , y_trimmed, _ = train_test_split(X_enc, y, test_size=0.4, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(68070, 1092)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_trimmed.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Splitting the data into train and test\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_enc, y, test_size=.3, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read out all 4 sets of training/testing data to csv files so we don't have to repeat this work during the next phase\n",
     "\n",
     "X_train.to_csv('MercariX_train.csv')\n",
     "y_train.to_csv('Mercariy_train.csv')\n",
