--- a/MercariDataWrangling.ipynb
+++ b/MercariDataWrangling.ipynb
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So it appears that our data is simply a large row of item listings on Mercari, and its columns are pretty straightforward. Here is a description for each:\n",
+    "So it appears that our data is simply a large amount of item listings on Mercari, and its columns are pretty straightforward. Here is a description for each:\n",
     "\n",
     "Name: name of the listing\n",
     "\n",
