--- a/MercariPreProcessing.ipynb
+++ b/MercariPreProcessing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "4  Customized & Personalized 4.80735         0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,6 +142,34 @@
     "pd.set_option('display.float_format', lambda x: '%.5f' % x)\n",
     "\n",
     "mercari_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 567252 entries, 0 to 567251\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column     Non-Null Count   Dtype  \n",
+      "---  ------     --------------   -----  \n",
+      " 0   Condition  567252 non-null  int64  \n",
+      " 1   Category   567252 non-null  object \n",
+      " 2   Brand      567252 non-null  object \n",
+      " 3   Price      567252 non-null  float64\n",
+      " 4   Shipping   567252 non-null  int64  \n",
+      "dtypes: float64(1), int64(2), object(2)\n",
+      "memory usage: 21.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "mercari_data.info()"
    ]
   },
   {
@@ -254,12 +282,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# final dataset will be defined in df\n",
-    "\n",
     "df = mercari_data[['Category', 'Brand', 'Price', 'Shipping']]"
    ]
   },
@@ -272,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +317,7 @@
        "(113450, 4)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,42 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_enc = pd.get_dummies(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Trimming Data down to a more workable size\n",
-    "\n",
-    "X_trimmed, _ , y_trimmed, _ = train_test_split(X_enc, y, test_size=0.4, random_state=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(68070, 1092)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_trimmed.shape"
    ]
   },
   {
@@ -380,13 +376,6 @@
     "X_test.to_csv('MercariX_test.csv')\n",
     "y_test.to_csv('Mercariy_test.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
